--- a/docs/_data/translations.yml
+++ b/docs/_data/translations.yml
@@ -3,6 +3,11 @@
   description: Bootstrap 中文文档
   url: http://v4.bootcss.com/
 
+- name: Chinese
+  code: zh
+  description: Bootstrap 4 中文文档教程
+  url: http://boot4.com/
+
 - name: Japanese
   code: ja
   description: Bootstrap 4 日本語リファレンス
