Use cssnano instead of clean-css

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   ],
   "scripts": {
     "change-version": "node grunt/change-version.js",
-    "clean-css": "cleancss --skip-advanced --source-map --output dist/css/bootstrap.min.css dist/css/bootstrap.css && cleancss --skip-advanced --source-map --output dist/css/bootstrap-grid.min.css dist/css/bootstrap-grid.css && cleancss --skip-advanced --source-map --output dist/css/bootstrap-reboot.min.css dist/css/bootstrap-reboot.css",
-    "clean-css-docs": "cleancss --skip-advanced --source-map --output docs/assets/css/docs.min.css docs/assets/css/docs.min.css",
+    "cssnano": "cssnano dist/css/bootstrap.css dist/css/bootstrap.min.css -s --no-mergeRules & cssnano dist/css/bootstrap-grid.css dist/css/bootstrap-grid.min.css -s --no-mergeRules & cssnano dist/css/bootstrap-reboot.css dist/css/bootstrap-reboot.min.css -s --no-mergeRules",
+    "cssnano-docs": "cssnano docs/assets/css/docs.min.css docs/assets/css/docs.min.css -s --no-mergeRules",
     "eslint": "eslint --ignore-path .eslintignore js && eslint --config js/tests/.eslintrc.json --env node grunt Gruntfile.js && eslint --config js/tests/.eslintrc.json docs/assets/js/src docs/assets/js/ie-emulation-modes-warning.js docs/assets/js/ie10-viewport-bug-workaround.js",
     "htmlhint": "htmlhint --config docs/.htmlhintrc _gh_pages/",
     "postcss": "postcss --config grunt/postcss.js --replace dist/css/*.css",
@@ -53,7 +53,7 @@
     "babel-eslint": "^7.1.1",
     "babel-plugin-transform-es2015-modules-strip": "^0.1.0",
     "babel-preset-es2015": "^6.18.0",
-    "clean-css": "^3.4.23",
+    "cssnano-cli": "^1.0.5",
     "eslint": "^3.12.2",
     "grunt": "^1.0.1",
     "grunt-babel": "^6.0.0",
