--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,10 @@ before_install:
   - if [ "$TRAVIS_REPO_SLUG" = twbs-savage/bootstrap ]; then export TWBS_DO_VALIDATOR=0; fi
 install:
   - bundle install --deployment --jobs=3 --retry=3
-  - cp grunt/npm-shrinkwrap.json ./
+  - cp build/npm-shrinkwrap.json ./
   - npm install
 after_success:
-  - if [ "$TWBS_TEST" = sauce-js-unit ]; then grunt/upload-preview.sh; fi
+  - if [ "$TWBS_TEST" = sauce-js-unit ]; then build/upload-preview.sh; fi
 cache:
   directories:
     - node_modules
