Enable EmptyLineBetweenBlocks linter
The use of empty line between blocks was quite inconsistent, this linter
will increase the uniformity of the code.

--- a/scss/.scss-lint.yml
+++ b/scss/.scss-lint.yml
@@ -64,7 +64,7 @@ linters:
     style: same_line # or 'new_line'
 
   EmptyLineBetweenBlocks:
-    enabled: false
+    enabled: true
     ignore_single_line_blocks: true
 
   EmptyRule:
