--- a/package.json
+++ b/package.json
@@ -17,22 +17,14 @@
     "Twitter, Inc."
   ],
   "scripts": {
+    "postinstall": "gem install bundler && bundler install",
     "change-version": "node grunt/change-version.js",
-    "clean-css": "cleancss --level 1 --source-map --output dist/css/bootstrap.min.css dist/css/bootstrap.css && cleancss --level 1 --source-map --output dist/css/bootstrap-grid.min.css dist/css/bootstrap-grid.css && cleancss --level 1 --source-map --output dist/css/bootstrap-reboot.min.css dist/css/bootstrap-reboot.css",
-    "clean-css-docs": "cleancss --level 1 --source-map --output docs/assets/css/docs.min.css docs/assets/css/docs.min.css",
-    "eslint": "eslint --ignore-path .eslintignore js && eslint --config js/tests/.eslintrc.json --env node grunt Gruntfile.js && eslint --config js/tests/.eslintrc.json docs/assets/js/src docs/assets/js/ie-emulation-modes-warning.js docs/assets/js/ie10-viewport-bug-workaround.js",
-    "htmlhint": "htmlhint --config docs/.htmlhintrc _gh_pages/",
-    "htmllint": "htmllint --rc docs/.htmllintrc _gh_pages/**/*.html js/tests/visual/*.html",
-    "postcss": "postcss --config grunt/postcss.js --replace dist/css/*.css",
-    "postcss-docs": "postcss --config grunt/postcss.js --no-map --replace docs/assets/css/docs.min.css && postcss --config grunt/postcss.js --no-map --replace docs/examples/**/*.css",
-    "sass": "node-sass --output-style expanded --source-map true --precision 6 scss/bootstrap.scss dist/css/bootstrap.css && node-sass --output-style expanded --source-map true --precision 6 scss/bootstrap-grid.scss dist/css/bootstrap-grid.css && node-sass --output-style expanded --source-map true --precision 6 scss/bootstrap-reboot.scss dist/css/bootstrap-reboot.css",
-    "sass-docs": "node-sass --output-style expanded --source-map true --precision 6 docs/assets/scss/docs.scss docs/assets/css/docs.min.css",
-    "scss-lint": "bundle exec scss-lint --config scss/.scss-lint.yml scss/*.scss",
-    "scss-lint-docs": "bundle exec scss-lint --config scss/.scss-lint.yml --exclude docs/assets/scss/docs.scss docs/assets/scss/*.scss",
-    "uglify": "uglifyjs --compress warnings=false --mangle --comments '/^!/' --output dist/js/bootstrap.min.js dist/js/bootstrap.js",
-    "uglify-docs": "uglifyjs --compress warnings=false --mangle --comments '/^!/' --output docs/assets/js/docs.min.js docs/assets/js/vendor/anchor.min.js docs/assets/js/vendor/clipboard.min.js docs/assets/js/vendor/holder.min.js docs/assets/js/src/application.js",
-    "update-shrinkwrap": "npm shrinkwrap --dev && shx mv ./npm-shrinkwrap.json ./grunt/npm-shrinkwrap.json",
-    "test": "npm run eslint && grunt test"
+    "update-shrinkwrap": "npm shrinkwrap --dev && shx mv ./npm-shrinkwrap.json ./build/npm-shrinkwrap.json",
+    "test": "grunt test",
+    "dist": "grunt dist",
+    "watch": "grunt watch-serve",
+    "prep-release": "grunt prep-release",
+    "publish": "grunt publish"
   },
   "style": "dist/css/bootstrap.css",
   "sass": "scss/bootstrap.scss",
@@ -54,33 +46,42 @@
     "babel-eslint": "^7.1.1",
     "babel-plugin-transform-es2015-modules-strip": "^0.1.0",
     "babel-preset-es2015": "^6.22.0",
-    "clean-css-cli": "^4.0.0",
     "eslint": "^3.15.0",
     "grunt": "^1.0.1",
     "grunt-babel": "^6.0.0",
     "grunt-build-control": "^0.7.1",
+    "grunt-concurrent": "^2.3.1",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-compress": "^1.4.1",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^1.0.2",
     "grunt-contrib-qunit": "^1.2.0",
+    "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-exec": "^1.0.1",
-    "grunt-jekyll": "^0.4.6",
+    "grunt-eslint": "^19.0.0",
+    "grunt-html": "^8.3.2",
+    "grunt-htmlhint": "^0.9.13",
+    "grunt-if": {
+      "version": "^0.1.5",
+      "dependencies": {
+        "grunt": "^1.0.0"
+      }
+    },
+    "grunt-jekyll": "^0.4.4",
+    "grunt-postcss": "^0.8.0",
+    "grunt-sass": "^2.0.0",
     "grunt-saucelabs": "^9.0.0",
-    "grunt-stamp": "^0.3.0",
-    "htmlhint": "^0.9.13",
-    "htmllint-cli": "^0.0.6",
-    "is-travis": "^1.0.0",
-    "load-grunt-tasks": "^3.5.2",
-    "node-sass": "^4.5.0",
-    "postcss-cli": "^2.6.0",
+    "grunt-stylelint": "^0.6.0",
+    "jit-grunt": "^0.10.0",
+    "load-grunt-config": "^0.19.2",
     "postcss-flexbugs-fixes": "^2.1.0",
-    "shelljs": "^0.7.6",
-    "shx": "^0.2.2",
-    "time-grunt": "^1.4.0",
-    "uglify-js": "^2.7.5"
+    "shelljs": "^0.7.5",
+    "shx": "^0.2.1",
+    "stylelint-scss": "^1.4.1",
+    "stylelint-selector-no-utility": "^1.5.0",
+    "time-grunt": "^1.4.0"
   },
   "engines": {
     "node": ">=4"
