[DR-7755] adds sections

--- a/docs/_data/nav.yml
+++ b/docs/_data/nav.yml
@@ -16,6 +16,7 @@
     - title: Grid
     - title: Media object
     - title: Responsive utilities
+    - title: Sections
 
 - title: Content
   pages:
