Better action bar behaviour (#93)
* Change column layout cover background.
* Centre dropdown buttons that are not inputs
* Improve responsive action bar example and new single top-nav component
* Better responsive sequence.
* Migrate example pages to top-nav
* Make key example pages work offline.

--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,8 @@
     "test-infra"
   ],
   "dependencies": {
-    "jquery": ">= 1.9.1"
+    "jquery": ">= 1.9.1",
+    "angular": "< 2.0.0",
+    "styleguide-components": "https://github.com/transferwise/styleguide-components.git"
   }
 }
