adds slick slider

--- a/docs/_data/nav.yml
+++ b/docs/_data/nav.yml
@@ -49,6 +49,7 @@
     - title: Popovers
     - title: Progress
     - title: Scrollspy
+    - title: Slider
     - title: Tooltips
     - title: Tags
 
