adds markup and doc for search-agent

--- a/docs/_data/nav.yml
+++ b/docs/_data/nav.yml
@@ -51,6 +51,7 @@
     - title: Progress
     - title: Scrollspy
     - title: Slider
+    - title: Search Agent
     - title: Tooltips
     - title: Tags
 
