--- a/docs/_data/nav.yml
+++ b/docs/_data/nav.yml
@@ -39,6 +39,7 @@
     - title: Carousel
     - title: Collapse
     - title: Dropdowns
+    - title: Facet
     - title: Forms
     - title: Input group
     - title: Jumbotron
