--- a/docs/_data/nav.yml
+++ b/docs/_data/nav.yml
@@ -63,6 +63,7 @@
     - title: Colors
     - title: Flexbox
     - title: Display property
+    - title: Icons
     - title: Image replacement
     - title: Invisible content
     - title: Position
