--- a/_rc-config.yml
+++ b/_rc-config.yml
@@ -1,6 +1,6 @@
 # Server
 source:           _tmp_rc_docs
-url:              https://docs.realcrowd.com
+url:              https://realcrowd.github.io/bootstrap
 
 # Social
 # title: RealCrowd UX Documentation (Fork Of Bootstrap)
