--- a/_rc-config.yml
+++ b/_rc-config.yml
@@ -1,5 +1,6 @@
 # Server
 source:           _tmp_rc_docs
+baseurl:          "bootstrap"
 url:              https://realcrowd.github.io/bootstrap
 
 # Social
