--- a/package.json
+++ b/package.json
@@ -46,20 +46,33 @@
     "docs-serve": "npm run docs-clean && bundle exec jekyll serve",
     "docs-github": "shx echo 'github: true' > $npm_config_tmp/twbsconfig.yml && npm run docs-compile -- --config _config.yml,$npm_config_tmp/twbsconfig.yml && shx rm $npm_config_tmp/twbsconfig.yml",
     "docs-upload-preview": "build/upload-preview.sh",
-
     "realcrowd-docs": "npm-run-all realcrowd-docs-compile realcrowd-docs-lint",
     "realcrowd-docs-lint": "htmlhint --config _tmp_rc_docs/.htmlhintrc _gh_pages/ js/tests/visual/ && htmllint --rc _tmp_rc_docs/.htmllintrc _gh_pages/*.html _gh_pages/**/*.html js/tests/visual/*.html",
     "realcrowd-docs-clean": "npm run docs-clean",
-    "realcrowd-docs-compile": "npm run realcrowd-docs-clean && shx cp -R docs _tmp_rc_docs && shx cp -Rf docs-realcrowd/** _tmp_rc_docs && npm run docs-compile -- --config _config.yml,_rc-config.yml",
-    "realcrowd-docs-serve": "npm run realcrowd-docs-clean && bundle exec jekyll serve --config _config.yml,_rc-config.yml",
+    "realcrowd-docs-compile": "npm run realcrowd-docs-clean && shx cp -R docs/** _tmp_rc_docs && shx cp -Rf docs-realcrowd/** _tmp_rc_docs && npm run docs-compile -- --config _config.yml,_rc-config.yml",
+    "realcrowd-docs-serve": "npm run realcrowd-docs-clean && bundle exec jekyll serve --config _config.yml,_rc-config.yml --watch",
     "realcrowd-docs-github": "shx echo 'github: true' > $npm_config_tmp/twbsconfig.yml && npm run docs-compile -- --config _config.yml,_rc-config.yml,_rc-gh-config.yml,$npm_config_tmp/twbsconfig.yml && shx rm $npm_config_tmp/twbsconfig.yml",
-
     "maintenance-dependencies": "ncu -a -x jquery && bundle update && shx echo 'Manually update docs/assets/js/vendor/*, js/tests/vendor/*, bower.json and .travis.yml'",
     "maintenance-shrinkwrap": "npm shrinkwrap --dev && shx mv npm-shrinkwrap.json build/npm-shrinkwrap.json",
     "release-version": "node build/change-version.js",
     "release-zip": "cd dist/ && zip -r9 bootstrap-$npm_package_version-dist.zip * && shx mv bootstrap-$npm_package_version-dist.zip ..",
     "dist": "npm-run-all --parallel css js",
-    "test": "npm-run-all dist docs"
+    "test": "npm-run-all dist docs",
+    "watch": "npm-watch",
+    "realcrowd-docs-copy": "shx cp -R docs/** _tmp_rc_docs && shx cp -Rf docs-realcrowd/** _tmp_rc_docs",
+    "realcrowd-docs-watch": "npm run realcrowd-docs-copy",
+    "realcrowd-scss-watch": "npm-run-all css css-docs && npm run realcrowd-docs-clean",
+    "realcrowd-js-watch": "npm-run-all js && js-docs && npm run realcrowd-docs-clean"
+  },
+  "watch": {
+    "realcrowd-docs-watch": {
+      "patterns": ["docs","docs-realcrowd"],
+      "extensions": "html,md,png,txt,ico,css,js"
+    },
+    "realcrowd-scss-watch": {
+      "patterns": ["scss"],
+      "extensions": "scss"
+    }
   },
   "style": "dist/css/bootstrap.css",
   "sass": "scss/bootstrap.scss",
@@ -90,6 +103,7 @@
     "htmllint-cli": "^0.0.6",
     "node-sass": "^4.5.2",
     "npm-run-all": "^4.0.2",
+    "npm-watch": "^0.1.8",
     "phantomjs-prebuilt": "^2.1.14",
     "postcss-cli": "^3.1.1",
     "postcss-flexbugs-fixes": "^2.1.1",
