--- a/docs/_data/colors.yml
+++ b/docs/_data/colors.yml
@@ -1,32 +1,26 @@
-- name: red
-  hex: "#d9534f"
-
-- name: orange
-  hex: "#f0ad4e"
-
-- name: yellow
-  hex: "#ffd500"
-
-- name: green
-  hex: "#5cb85c"
-
-- name: teal
-  hex: "#5bc0de"
-
 - name: blue
-  hex: "#5cb85c"
-
-- name: pink
-  hex: "#ff5b77"
-
+  hex: "#007aff"
+- name: indigo
+  hex: "#2b29bb"
 - name: purple
-  hex: "#613d7c"
-
+  hex: "#882ae0"
+- name: pink
+  hex: "#f14095"
+- name: red
+  hex: "#ea0242"
+- name: orange
+  hex: "#ff8d00"
+- name: yellow
+  hex: "#ffec00"
+- name: green
+  hex: "#34da36"
+- name: teal
+  hex: "#1dde8e"
+- name: cyan
+  hex: "#08eff3"
 - name: white
   hex: "#fff"
-
 - name: gray
   hex: "#464a4c"
-
 - name: gray-dark
   hex: "#292b2c"
