Pull in the Algolia search gems into our config and Gemfile

--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,14 @@ encoding:         UTF-8
 exclude:          [assets/scss/]
 
 gems:
+  - algoliasearch-jekyll
   - jekyll-redirect-from
   - jekyll-sitemap
+
+algolia:
+  application_id: "YHC4ZXLJL7"
+  index_name: "bootstrap_docs"
+  read_only_api_key: "250a854084e2ce05558580cf48695b56"
 
 # Social
 title: Bootstrap
