--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "css-docs": "npm-run-all css-lint-docs css-compile-docs css-prefix-docs css-minify-docs",
     "css-lint": "bundle exec scss-lint --config .scss-lint.yml scss/*.scss",
     "css-lint-docs": "bundle exec scss-lint --config .scss-lint.yml --exclude assets/scss/docs.scss assets/scss/*.scss",
-    "css-compile": "node-sass --output-style expanded --source-map true --precision 6 scss/bootstrap.scss dist/css/bootstrap.css && node-sass --output-style expanded --source-map true --precision 6 scss/bootstrap-grid.scss dist/css/bootstrap-grid.css && node-sass --output-style expanded --source-map true --precision 6 scss/bootstrap-reboot.scss dist/css/bootstrap-reboot.css",
-    "css-compile-docs": "node-sass --output-style expanded --source-map true --precision 6 assets/scss/docs.scss assets/css/docs.min.css",
+    "css-compile": "node-sass --functions build/sass-functions.js --output-style expanded --source-map true --precision 6 scss/bootstrap.scss dist/css/bootstrap.css && node-sass --functions build/sass-functions.js --output-style expanded --source-map true --precision 6 scss/bootstrap-grid.scss dist/css/bootstrap-grid.css && node-sass --functions build/sass-functions.js --output-style expanded --source-map true --precision 6 scss/bootstrap-reboot.scss dist/css/bootstrap-reboot.css",
+    "css-compile-docs": "node-sass --functions build/sass-functions.js --output-style expanded --source-map true --precision 6 assets/scss/docs.scss assets/css/docs.min.css",
     "css-prefix": "postcss --config build/ --replace dist/css/*.css",
     "css-prefix-docs": "postcss --config build/ --no-map --replace assets/css/docs.min.css",
     "css-minify": "cleancss --level 1 --source-map --output dist/css/bootstrap.min.css dist/css/bootstrap.css && cleancss --level 1 --source-map --output dist/css/bootstrap-grid.min.css dist/css/bootstrap-grid.css && cleancss --level 1 --source-map --output dist/css/bootstrap-reboot.min.css dist/css/bootstrap-reboot.css",
@@ -89,7 +89,6 @@
     "postcss-cli": "^4.0.0",
     "qunit-phantomjs-runner": "^2.3.0",
     "qunitjs": "^2.3.2",
-    "sass-math-pow": "^0.1.4",
     "shelljs": "^0.7.7",
     "shx": "^0.2.2",
     "uglify-js": "^3.0.13"
