--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -22,6 +22,7 @@
   pages:
     - title: Reboot
     - title: Typography
+    - title: Responsive font sizes
     - title: Code
     - title: Images
     - title: Tables
