--- a/js/.eslintrc.json
+++ b/js/.eslintrc.json
@@ -6,6 +6,9 @@
     "es6": true,
     "jquery": true
   },
+  "globals": {
+    "DocumentTouch": true
+  },
   "extends": "eslint:recommended",
   "parserOptions": {
     "ecmaVersion": 8,
