--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "js-test": "phantomjs ./node_modules/qunit-phantomjs-runner/runner.js js/tests/index.html 60",
     "js-test-cloud": "ruby -r webrick -e \"s = WEBrick::HTTPServer.new(:Port => 3000, :DocumentRoot => Dir.pwd, :Logger => WEBrick::Log.new('/dev/null'), :AccessLog => []); trap('INT') { s.shutdown }; s.start\" & grunt saucelabs-qunit",
     "docs": "npm-run-all docs-compile docs-lint",
-    "docs-lint": "htmllint --rc build/.htmllintrc _gh_pages/*.html _gh_pages/**/*.html js/tests/visual/*.html",
+    "docs-lint": "node ./build/html-validator.js",
     "docs-compile": "bundle exec jekyll build",
     "postdocs-compile": "npm run docs-workbox-precache",
     "docs-serve": "bundle exec jekyll serve",
@@ -76,6 +76,7 @@
     "popper.js": "^1.12.3"
   },
   "devDependencies": {
+    "async": "^2.5.0",
     "autoprefixer": "^7.1.2",
     "babel-cli": "^7.0.0-beta.0",
     "babel-eslint": "^8.0.0",
@@ -86,10 +87,11 @@
     "cross-env": "^5.0.5",
     "eslint": "^4.2.0",
     "eslint-plugin-compat": "^1.0.4",
+    "glob": "^7.1.2",
     "grunt": "^1.0.1",
     "grunt-cli": "^1.2.0",
     "grunt-saucelabs": "^9.0.0",
-    "htmllint-cli": "^0.0.6",
+    "html-validator": "^2.2.3",
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
